--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,30 +1,33 @@
-name: Build Windows EXE
+name: Build Windows EXE (x86 + x64)
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ "main" ]
 
 jobs:
-  build-win:
+  build:
     runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: [x86, x64]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Setup Python (3.8, ${{ matrix.arch }})
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-          cache: 'pip'
-          cache-dependency-path: 'requirements.txt'
+          python-version: "3.8"
+          architecture: ${{ matrix.arch }}
 
-      - name: Build with PyInstaller
+      - name: Build
         shell: pwsh
-        run: ./build_win.ps1
+        run: |
+          ./build_win.ps1 -Arch "${{ matrix.arch }}"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: LabelApp-windows
-          path: dist/LabelApp.exe
+          name: LabelApp-${{ matrix.arch }}
+          path: dist/LabelApp-${{ matrix.arch }}.exe
