Update Windows build workflow for Python version and naming

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,11 +1,16 @@
-name: Build Windows EXE (x86 + x64)
+name: Build Windows EXE
 
 on:
   workflow_dispatch:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  build:
+  build-win:
     runs-on: windows-latest
+
     strategy:
       fail-fast: false
       matrix:
@@ -15,19 +20,40 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Python (3.8, ${{ matrix.arch }})
+      - name: Set up Python (${{ matrix.arch }})
         uses: actions/setup-python@v5
         with:
-          python-version: "3.8"
+          python-version: "3.11"
           architecture: ${{ matrix.arch }}
+          cache: "pip"
 
-      - name: Build
+      - name: Show Python info
+        shell: pwsh
+        run: |
+          python --version
+          python -c "import platform,struct; print('platform:', platform.platform()); print('arch:', struct.calcsize('P')*8)"
+
+      - name: Install dependencies
+        shell: pwsh
+        run: |
+          python -m pip install --upgrade pip wheel setuptools
+          pip install -r requirements.txt
+
+      - name: Build EXE (PyInstaller)
         shell: pwsh
         run: |
           ./build_win.ps1 -Arch "${{ matrix.arch }}"
 
+      - name: Verify output
+        shell: pwsh
+        run: |
+          if (!(Test-Path "dist\LabelApp-${{ matrix.arch }}.exe")) {
+            Write-Error "dist\LabelApp-${{ matrix.arch }}.exe not found. Check build_win.ps1 output name/path."
+          }
+          Get-Item "dist\LabelApp-${{ matrix.arch }}.exe" | Format-List Name,Length,LastWriteTime
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: LabelApp-${{ matrix.arch }}
+          name: LabelApp-windows-${{ matrix.arch }}
           path: dist/LabelApp-${{ matrix.arch }}.exe
